# MineCraftExample

./: README.md  setup.cfg
src/MineCraftExample/assets/scripts/: block_type.py  camera.py  chunk.py  texture_manager.py  world.py
text/: markdown
